# mpv-web-remote

./: Cargo.toml  README.md  about.hbs  about.toml  licenses.html  mpv-web-remote.service  nfpm.yaml  release.sh  script.js
src/: ipc.rs  lib.rs  main.rs  messages.rs
templates/: index.html
